<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MyAndroid</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="filename">文件名</string>
    <string name="context">文件内容</string>
    <string name="save">保存</string>
    <string name="append">追加内容</string>
    <string name="readContext">读取内容</string>
    <string name="saveError">保存失败</string>
    <string name="saveSuccess">保存成功</string>
    <string name="inputFileName">请输入文件名</string>
    <string name="inputContext">请输入文件内容</string>
    <string name="readError">读取内容失败或文件不存在</string>
    <string name="readSdXML">读取SD卡的XML文件</string>
    <string name="back">返回</string>
    
    <!-- pref_activity -->
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="inputName">姓名不能为空</string>
    <string name="inputAge">年龄必须为大于0的整数</string>
    <string name="toPref">使用SharedPreferences进行数据存储</string>
    
    <!-- open_activity -->
    <string name="openTile">打开新窗口</string>
    <string name="openActivityContext1">打开一个新窗口并把文本框内容传过去</string>
    <string name="openActivityContext2">打开一个新窗口并把新窗口的文本框内容传回来</string>
    <string name="sendActivityContext">将内容传到新的窗口打开</string>
    <string name="openActivityContext">打开新的窗口输入值</string>
    <string name="openActivity">打开新窗口</string>
    
    <!-- listview_activity -->
    <string name="pid">序号</string>
    <string name="openListView">打开ListView</string>
    
    <!-- contact_activity -->
    <string name="getContact">获取系统联系人</string>
    <string name="tel">电话</string>
    
    <string name="openOtherApp">打开MutualAndroid并转MyAndroid过去</string>
    <string name="openOtherApp2">打开MutualAndroid的OtherActivity并转MyAndroid过去</string>
    <string name="liaojie">了解Activity的生命周期</string>
    <string name="alert">打开模式窗口</string>
</resources>
