<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="2dp"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
	    <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/filename" />

		<EditText
		    android:id="@+id/filename"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:inputType="text"
		    android:text="test.txt" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >
	    <TextView
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/context" />
		<EditText
		    android:id="@+id/context"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:minLines="3"
		    android:maxLines="5"
		    android:inputType="none"
		    android:gravity="top" />
	    <LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content" >
			<Button 
			    android:id="@+id/save"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/save" />
			<Button 
			    android:id="@+id/append"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/append" />
			<Button 
			    android:id="@+id/showContext"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:text="@string/readContext" />
		</LinearLayout>
		<Button 
		    android:id="@+id/readXML"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/readSdXML" />
		<TextView android:id="@+id/showContextView"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:textIsSelectable="true" />
    </LinearLayout>
</LinearLayout>
