<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
    	android:orientation="horizontal" >
	    <TextView 
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/pid"/>
	    <TextView 
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:gravity="left"
	        android:text="@string/name"/>
	    <TextView 
	        android:layout_width="150dp"
	        android:layout_height="wrap_content"
	        android:text="@string/tel"
	        android:textIsSelectable="true"/>
    </LinearLayout>
    <ListView 
        android:id="@+id/listView"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"></ListView>
</LinearLayout>